plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.connect'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }//JitPack 저장소 - Iamport
    google()
    maven { url 'https://maven.google.com/' }
}

dependencies {
    //spring-boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'
    //junit
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    //Bcrypt
    implementation 'at.favre.lib:bcrypt:0.10.2'
    //QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    //lombok
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    //s3
    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
    implementation 'software.amazon.awssdk:s3:2.20.89'
    //Cache
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    //spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //Iamport
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
    //Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation('com.google.firebase:firebase-admin:9.4.2') {
        exclude group: 'com.google.api-client', module: 'google-api-client'
    }
    // Spring Security OAuth2 Client
    implementation 'org.springframework.security:spring-security-oauth2-client'
    // googlee Login

    implementation("com.google.api-client:google-api-client:1.33.0") // 호환되는 버전으로 변경
    implementation 'com.google.http-client:google-http-client:1.43.3'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20220520-1.32.1'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.redisson:redisson-spring-boot-starter:3.23.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

